--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
-RewriteEngine on
+AddDefaultCharset UTF-8
+Options -Indexes
+RewriteEngine On
+RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule . index.php [L]
+RewriteRule ^ index.php [L]
+
+ErrorDocument 403 /index.php
